add clients section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,57 @@
         <img class="col-md-4" src="resources/images/smart.png">
       </div>
     </div>
-    <div class="container team_box">
-      <div class="row team_header">
-        <div class="col-md-12">
+    <div class="container team_box" role="presentation">
+      <div class="row" role="presentation">
+        <div class="col-md-12 team_header text-center" role="presentation">
           <h2>Meet the team</h2>
         </div>
+      </div>
+      <div class="row" role="presentation">
+        <div class="col-sm-3 col-xs-12 picture" role="presentation">
+          <img src="resources/images/brian.png" alt="Brian">
+        </div>
+        <div class="col-sm-3 col-xs-12 picture" role="presentation">
+          <img src="resources/images/andy.png" alt="Andy">
+        </div>
+        <div class="col-sm-3 col-xs-12 picture"role="presentation">
+          <img src="resources/images/angela.png" alt="Angela">
+        </div>
+        <div class="col-sm-3 col-xs-12 picture" role="presentation">
+          <img src="resources/images/amie.png" alt="amie">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3 col-xs-12 text-center captions" role="presentation">
+          <p>Brian Murphy</p>
+          <p>CEO</p>
+        </div>
+        <div class="col-sm-3 col-xs-12 text-center captions" role="presentation">
+          <p>Andy Cox</p>
+          <p>Co-Founder</p>
+        </div>
+        <div class="col-sm-3 col-xs-12 text-center captions" role="presentation">
+          <p>Angela Woronick</p>
+          <p>CFO</p>
+        </div>
+        <div class="col-sm-3 col-xs-12 text-center captions" role="presentation">
+          <p>Amie Shadlu</p>
+          <p>Angel Investor</p>
+        </div>
+      </div>
+      </div>
+    <div class="container" role="presentation">
+      <div class="row clients" role="presentation">
+        <h1 class="col-md-12 text-center">Current Clients</h1>
+      </div>
+      <div class="col-md-4" role="presentation">
+        <img src="resources/images/boxx.png" class="center-block">
+      </div>
+      <div class="col-md-4" role="presentation">
+        <img src="resources/images/element-design.png" class="center-block">
+      </div>
+      <div class="col-md-4" role="presentation">
+        <img src="resources/images/quantum.png" class="center-block">
       </div>
     </div>
 
