add footer and start media queries

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Adhoc</title>
+    <script src="https://use.fontawesome.com/ce00961acf.js"></script>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -31,6 +32,12 @@
       </div>
     </nav>
     <div class="jumbotron">
+      <div class="container">
+        <div class="row banner_box">
+          <h1 class="col-med-12 banner text-center">Administration made easy</h1>
+          <p class="col-md-12 tag_line text-center">Adhoc is an on-demand administrative service for your company growth</p>
+        </div>
+      </div>
 
     </div>
     <div class="container" role="presentation">
@@ -48,9 +55,9 @@
         <h1 class="col-md-12 text-center">Why Adhoc?</h1>
       </div>
       <div class="row why_icons" role="presentation">
-        <img class="col-md-4" src="resources/images/experienced.png">
-        <img class="col-md-4" src="resources/images/fun.png">
-        <img class="col-md-4" src="resources/images/smart.png">
+        <img class="col-md-4 col-sm-4 col-xs-12" src="resources/images/experienced.png">
+        <img class="col-md-4 col-sm-4 col-xs-12" src="resources/images/fun.png">
+        <img class="col-md-4 col-sm-4 col-xs-12" src="resources/images/smart.png">
       </div>
     </div>
     <div class="container team_box" role="presentation">
@@ -61,16 +68,32 @@
       </div>
       <div class="row" role="presentation">
         <div class="col-sm-3 col-xs-12 picture" role="presentation">
-          <img src="resources/images/brian.png" alt="Brian">
+          <div class="headshot">
+            <img src="resources/images/brian.png" alt="Brian">
+            <p>Brian Murphy</p>
+            <p>CEO</p>
+          </div>
         </div>
         <div class="col-sm-3 col-xs-12 picture" role="presentation">
-          <img src="resources/images/andy.png" alt="Andy">
+          <div class="headshot">
+            <img src="resources/images/andy.png" alt="Andy">
+            <p>Andy Cox</p>
+            <p>Co-Founder</p>
+          </div>
         </div>
         <div class="col-sm-3 col-xs-12 picture"role="presentation">
-          <img src="resources/images/angela.png" alt="Angela">
+          <div class="headshot">
+            <img src="resources/images/angela.png" alt="Angela">
+            <p>Angela Woronick</p>
+            <p>CFO</p>
+          </div>
         </div>
         <div class="col-sm-3 col-xs-12 picture" role="presentation">
-          <img src="resources/images/amie.png" alt="amie">
+          <div class="headshot">
+            <img src="resources/images/amie.png" alt="amie">
+            <p>Amie Shadlu</p>
+            <p>Angel Investor</p>
+            <div>
         </div>
       </div>
       <div class="row">
@@ -106,7 +129,23 @@
         <img src="resources/images/quantum.png" class="center-block">
       </div>
     </div>
+<footer>
+  <div class="container-fluid" role="presentation">
+    <div class="row" role="presentation">
+      <div class="col-md-12 social_media text-center">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 copyright text-center">
+        <p>&copy 2016 Adhoc all rights reserved</p>
+      </div>
+    </div>
+  </div>
 
+</footer>
 
   </body>
 </html>
