fix nav bar in small screens and finish off project.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="resources/images/amie.png" alt="amie">
             <p>Amie Shadlu</p>
             <p>Angel Investor</p>
-            <div>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -123,7 +123,7 @@
         <img src="resources/images/boxx.png" class="center-block">
       </div>
       <div class="col-md-4" role="presentation">
-        <img src="resources/images/element-design.png" class="center-block">
+        <img src="resources/images/element-design.png" class="center-block client_logo">
       </div>
       <div class="col-md-4" role="presentation">
         <img src="resources/images/quantum.png" class="center-block">
